# swarmnet

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  COMMERCIAL_LICENSE_TEMPLATE.md  LICENSE  README.md
.github/workflows/: ci.yml
bench/: README.md
cmake/: Sanitizers.cmake  Warnings.cmake
docs/: MEMBERSHIP_MVP.md  REPLAY_CONTRACT.md  SERIALIZATION_CONTRACT.md  TRANSPORT_MVP.md
examples/minimal/: main.cpp
include/swarmnet/: core.hpp  membership.hpp  replay.hpp  swarmnet.hpp  transport.hpp
src/: core.cpp  membership.cpp  replay.cpp  swarmnet.cpp  transport.cpp
tests/support/: determinism.hpp
tests/unit/: test_core_kernel.cpp  test_determinism_harness.cpp  test_membership_cluster.cpp  test_replay_engine.cpp
tools/: README.md  amalgamate.py  benchmark_reference.cmake  swarmnet_test.cpp  verify_amalgamated.cmake
